adicionado style aos planos

--- a/index.html
+++ b/index.html
@@ -2,156 +2,165 @@
 <html lang="en">
 
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-tofit=no">
- <link rel="preconnect" href="https://fonts.googleapis.com">
- <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
- <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
- <link rel="stylesheet" type="text/css" href="/style.css">
- <title>FlexBlog</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-tofit=no">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,300&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="/style.css">
+  <title>FlexBlog</title>
 </head>
 
 <body>
- <div class="superinfo-bg">
-  <div class="superinfo">
-   <p>Seg / sex - 08:00 às 18:00</p>
-   <a href="tel:+5554996376693">+55 54 996376693 </a>
-   <p>Av 123,456, Caxias do sul - RS</p>
+  <div class="superinfo-bg">
+    <div class="superinfo">
+      <p>Seg / sex - 08:00 às 18:00</p>
+      <a href="tel:+5554996376693">+55 54 996376693 </a>
+      <p>Av 123,456, Caxias do sul - RS</p>
+    </div>
   </div>
- </div>
- <header class="menu-bg">
-  <div class="menu">
-   <div class="menu-logo">
-    <a href="#">FlexBlog</a>
-   </div>
-   <nav class="menu-nav">
-    <ul >
-     <li><a href="#">Sobre</a></li>
-     <li><a href="#">Produtos</a></li>
-     <li><a href="#">Preço</a></li>
-     <li><a href="#">Qualidade</a></li>
-    </ul>
-   </nav>
-  </div>
- </header>
- <h1 class="introducao">Novos valores e <br> Propriedades de CSS</h1>
- <section class="sobre" id="sobre">
-  <div class="sobre-info">
-   <h1>Sobre</h1>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-    das condições inegavelmente apropriadas objetivos.</p>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-    das condições inegavelmente apropriadas objetivos.</p>
-  </div>
-  <div>
-   <img src="img/sobre1.jpg" alt="sobre 1" />
-  </div>
-  <div>
-   <img src="img/sobre2.jpg" alt="sobre 1" />
-  </div>
- </section>
- <section class="produtos" id="produtos">
-  <h1>Produtos</h1>
-  <div class="produtos-container">
-   <div class="produtos-item purple">
-    <h2>Purlple</h2>
-    <img src="img/produtos1.jpg" alt="Produtos 1">
-   </div>
-   <div class="produtos-item pink">
-    <h2>Pink</h2>
-    <img src="img/produtos2.jpg" alt="Produtos 2">
-   </div>
-   <div class="produtos-item blue">
-    <h2>Blue</h2>
-    <img src="img/produtos3.jpg" alt="Produtos 3">
-   </div>
-  </div>
- </section>
- <section class="preco" id="preco">
-  <div class="preco-item">
-   <h2>Cobre</h2>
-   <span><sup>R$</sup>19</span>
-   <ul>
-    <li>Plano ilimitados</li>
-    <li>Acesso Restrito</li>
-    <li>Conteúdo Secreto</li>
-    <li>suporte 24h</li>
-   </ul>
-   <a href="#">Comprar</a>
-  </div>
-  <div class="preco-item">
-   <h2>Prata</h2>
-   <span><sup>R$</sup>19</span>
-   <ul>
-    <li>Plano ilimitados</li>
-    <li>Acesso Restrito</li>
-    <li>Conteúdo Secreto</li>
-    <li>suporte 24h</li>
-    <li>Compra Exclusiva</li>
-   </ul>
-   <a href="#">Comprar</a>
-  </div>
-  <div class="preco-item">
-   <h2>Ouro</h2>
-   <span><sup>R$</sup>19</span>
-   <ul>
-    <li>Plano ilimitados</li>
-    <li>Acesso Restrito</li>
-    <li>Conteúdo Secreto</li>
-    <li>suporte 24h</li>
-    <li>Compra Exclusiva</li>
-    <li>Download dos Itens</li>
-   </ul>
-   <a href="#">Comprar</a>
-  </div>
- </section>
- <section class="qualidade" id="qualidade">
-  <div class="qualidade-item">
-   <h2>Inteligente</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-   </p>
-  </div>
-  <div class="qualidade-item">
-   <h2>Compacto</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-    das condições inegavelmente</p>
-  </div>
-  <div class="qualidade-item">
-   <h2>Econômico</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-   </p>
-  </div>
-  <div class="qualidade-item">
-   <h2>Transparente</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-   </p>
-  </div>
-  <div class="qualidade-item">
-   <h2>Opaco</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-    das condições inegavelmente</p>
-  </div>
-  <div class="qualidade-item">
-   <h2>Sustentável</h2>
-   <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta previsão
-   </p>
-  </div>
- </section>
- <section class="newsletter">
-  <div class="newsletter-info">
-   <h1>Newsletter</h1>
-   <p>assine e fique por dentro das novidades</p>
-  </div>
-  <form class="newsletter-form">
-   <input type="text" placeholder="Seu e-mail">
-   <button type="submit">Assinar</button>
-  </form>
+  <header class="menu-bg">
+    <div class="menu">
+      <div class="menu-logo">
+        <a href="#">FlexBlog</a>
+      </div>
+      <nav class="menu-nav">
+        <ul>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Produtos</a></li>
+          <li><a href="#">Preço</a></li>
+          <li><a href="#">Qualidade</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <h1 class="introducao">Novos valores e <br> Propriedades de CSS</h1>
+  <section class="sobre" id="sobre">
+    <div class="sobre-info">
+      <h1>Sobre</h1>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+        das condições inegavelmente apropriadas objetivos.</p>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+        das condições inegavelmente apropriadas objetivos.</p>
+    </div>
+    <div>
+      <img src="img/sobre1.jpg" alt="sobre 1" />
+    </div>
+    <div>
+      <img src="img/sobre2.jpg" alt="sobre 1" />
+    </div>
+  </section>
+  <section class="produtos" id="produtos">
+    <h1>Produtos</h1>
+    <div class="produtos-container">
+      <div class="produtos-item purple">
+        <h2>Purlple</h2>
+        <img src="img/produtos1.jpg" alt="Produtos 1">
+      </div>
+      <div class="produtos-item pink">
+        <h2>Pink</h2>
+        <img src="img/produtos2.jpg" alt="Produtos 2">
+      </div>
+      <div class="produtos-item blue">
+        <h2>Blue</h2>
+        <img src="img/produtos3.jpg" alt="Produtos 3">
+      </div>
+    </div>
+  </section>
+  <section class="preco" id="preco">
+    <div class="preco-item">
+      <h2>Cobre</h2>
+      <span><sup>R$</sup>19</span>
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>suporte 24h</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+    <div class="preco-item">
+      <h2>Prata</h2>
+      <span><sup>R$</sup>25</span>
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>suporte 24h</li>
+        <li>Compra Exclusiva</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+    <div class="preco-item">
+      <h2>Ouro</h2>
+      <span><sup>R$</sup>35</span>
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>suporte 24h</li>
+        <li>Compra Exclusiva</li>
+        <li>Download dos Itens</li>
+      </ul>
+      <a href="#">Comprar</a>
+    </div>
+  </section>
+  <section class="qualidade" id="qualidade">
+    <div class="qualidade-item">
+      <h2>Inteligente</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+      </p>
+    </div>
+    <div class="qualidade-item">
+      <h2>Compacto</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+        das condições inegavelmente</p>
+    </div>
+    <div class="qualidade-item">
+      <h2>Econômico</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+      </p>
+    </div>
+    <div class="qualidade-item">
+      <h2>Transparente</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+      </p>
+    </div>
+    <div class="qualidade-item">
+      <h2>Opaco</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+        das condições inegavelmente</p>
+    </div>
+    <div class="qualidade-item">
+      <h2>Sustentável</h2>
+      <p>O que temos que ter sempre em mente é que a determinação clara de objetivos afeta positivamente a correta
+        previsão
+      </p>
+    </div>
+  </section>
+  <section class="newsletter">
+    <div class="newsletter-info">
+      <h1>Newsletter</h1>
+      <p>assine e fique por dentro das novidades</p>
+    </div>
+    <form class="newsletter-form">
+      <input type="text" placeholder="Seu e-mail">
+      <button type="submit">Assinar</button>
+    </form>
 
- </section>
- <footer class="footer">
-  <p>Todos direitos a Tiago</p>
- </footer>
+  </section>
+  <footer class="footer">
+    <p>Todos direitos a Tiago</p>
+  </footer>
 
 </body>
 
