--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
   </section>
   <footer class="footer">
-    <p>Todos direitos a Tiago</p>
+    <p>tgvieirabr -23/02/2022</p>
   </footer>
 
 </body>
