--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0 shrink-tofit=no">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,400;0,700;1,300&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>FlexBlog</title>
 </head>
@@ -57,7 +58,7 @@
     <h1>Produtos</h1>
     <div class="produtos-container">
       <div class="produtos-item purple">
-        <h2>Purlple</h2>
+        <h2>Purple</h2>
         <img src="img/produtos1.jpg" alt="Produtos 1">
       </div>
       <div class="produtos-item pink">
@@ -78,7 +79,7 @@
         <li>Plano ilimitados</li>
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
-        <li>suporte 24h</li>
+        <li>Suporte 24h</li>
       </ul>
       <a href="#">Comprar</a>
     </div>
@@ -89,7 +90,7 @@
         <li>Plano ilimitados</li>
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
-        <li>suporte 24h</li>
+        <li>Suporte 24h</li>
         <li>Compra Exclusiva</li>
       </ul>
       <a href="#">Comprar</a>
@@ -101,7 +102,7 @@
         <li>Plano ilimitados</li>
         <li>Acesso Restrito</li>
         <li>Conteúdo Secreto</li>
-        <li>suporte 24h</li>
+        <li>Suporte 24h</li>
         <li>Compra Exclusiva</li>
         <li>Download dos Itens</li>
       </ul>
@@ -158,9 +159,41 @@
 
   </section>
   <footer class="footer">
-    <p><a href="#">tgvieirabr</a> 23/02/2022</p>
+        <div class="footer-item">
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+        <li>Compra Exclusiva</li>
+        <li>Download dos Itens</li>
+      </ul>
+    </div>
+    <div class="footer-item">
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+        <li>Compra Exclusiva</li>
+        <li>Download dos Itens</li>
+      </ul>
+    </div>
+    <div class="footer-item">
+      <ul>
+        <li>Plano ilimitados</li>
+        <li>Acesso Restrito</li>
+        <li>Conteúdo Secreto</li>
+        <li>Suporte 24h</li>
+        <li>Compra Exclusiva</li>
+        <li>Download dos Itens</li>
+      </ul>
+    </div>
+  
   </footer>
-
+<div class="rodape">
+  <p>Todos os direitos reservados @tgvieirabr 2022</p>
+</div>
 </body>
 
 </html>
